# fixpro

./: .gitconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  compile_commands.json  pyproject.toml  setup-github.sh
.github/workflows/: build.yml  quality.yml
chipdb/: avr.json  i2c_eeprom.json  mcu.json  spi_flash.json
docs/: BUILD.md  Flash_Guide.md  SPEC.md  USB_Protocol.md  debug-test.html  index.html  ping-test.html  simple-test.html
docs/assets/: fixpro-core.js  fixpro-styles.css  index-2ctXi3e-.css  index-DHSM5Wf4.js
firmware/: CMakeLists.txt
firmware/pio/: i2c.pio  jtag.pio  spi.pio  swd.pio
firmware/platformio/: platformio.ini
firmware/platformio/src/: commands.cpp  commands.h  config.h  main.cpp
firmware/src/: fixpro_errors.h  main.c  tusb_config.h
firmware/src/flash/: spi_flash.c  spi_flash.h
firmware/src/hal/: hal.c  hal.h  jtag.c  jtag.h  onewire.c  onewire.h  swd.c  swd.h  updi.c  updi.h
firmware/src/safety/: safety.c  safety.h
firmware/src/usb/: usb_protocol.c  usb_protocol.h
host/cli/: __init__.py  device.py  fixpro.py  main.py
host/cli/protocols/: __init__.py
tests/protocol/: test_protocol.py
tests/web/: test_fixpro.js
